@@ -20,6 +20,9 @@
 
 #include "jakes-propagation-loss-model.h"
 #include "ns3/double.h"
+#include "ns3/log.h"
+
+NS_LOG_COMPONENT_DEFINE ("Jakes");
 
 namespace ns3
 {
